Fix tutorial on small screens to clamp appropriately, and additionally overflows if necessary Fixed mobile zooming issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -180,7 +180,7 @@ canvas {
     background: linear-gradient(135deg, blue 50%, yellow 50%);
 }
 
-#alert {
+#alert { /* Custom alert */
     display: none;
     background-color: rgba(211, 211, 211, .6);
     position: absolute;
@@ -194,8 +194,8 @@ canvas {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: clamp(500px, 50%, 1000px);
-    height: 65%;
+    width: clamp(min(550px, 100%), 50%, 1000px);
+    height: 67%;
     background-color: white;
     padding: 5px;
     border: 2px solid blue;
@@ -213,12 +213,18 @@ canvas {
     text-align: center;
     font-size: 13pt;
     padding: 5px;
+    margin-bottom: 50px;
+    flex: 1;
+    position: relative;
+    overflow: auto;
 }
 
 img {
     height: 50%;
     padding: 10px;
     object-fit: contain;
+    margin: auto;
+    display: block;
 }
 
 #helpImg {
